--- a/SQL-Library/SimpleShapeQuery.html
+++ b/SQL-Library/SimpleShapeQuery.html
@@ -21,14 +21,14 @@ AS component RELATE mukey TO mukey)</br>
 </div>
 <h3>Example Table format</h3></br>
 
-<img src=/TableImages/ShapeCommandT1.png></img></br>
-<img src=/TableImages/ShapeCommandT2.png></img></br>
+<img src=../TableImages/ShapeCommandT1.png></img></br>
+<img src=../TableImages/ShapeCommandT2.png></img></br>
 
 
 <p>For additional information on constructing and using Shape commands, please see a current text on Active X Data Objects (ADO), or search the web using the key phrase "ADO shape command". At the time this was written, an introduction to Shape command syntax was available as an article in the Microsoft Knowledge Base at the following </p></br>
 
-<link href="http://support.microsoft.com/kb/189657/en-us"</link></br>
+<link href="http://support.microsoft.com/kb/189657/en-us"></link></br>
 
 <p>A couple sample Shape commands are also included in the sample query document titled "Using an ADO Shape Command", available at the following </p></br>
 
-<link href="https://sdmdataaccess.sc.egov.usda.gov/queryhelp.aspx"</link></br>
+<link href="https://sdmdataaccess.sc.egov.usda.gov/queryhelp.aspx"></link></br>
