--- a/SQL-Library/SimpleShapeQuery.html
+++ b/SQL-Library/SimpleShapeQuery.html
@@ -22,9 +22,9 @@ AS component RELATE mukey TO mukey)</br>
 <h3>Example Table format</h3></br>
 <div>
 <img src="https://github.com/ncss-tech/sda-lib/trunk/TableImages/ShapeCommandT1.png"></img></br>
-</div>
+</div><div>
 <img src="https://github.com/ncss-tech/sda-lib/trunk/TableImages/ShapeCommandT2.png"></img></br>
-
+</div>
 
 <p>For additional information on constructing and using Shape commands, please see a current text on Active X Data Objects (ADO), or search the web using the key phrase "ADO shape command". At the time this was written, an introduction to Shape command syntax was available as an article in the Microsoft Knowledge Base at the following </p></br>
 
